INTYGFV-12005: Builds and runs, but 2 failing restassured.